# midl-status

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yaml  index.yaml  midl-status-v0.0.1.tgz  midl-status-v0.0.2.tgz  midl-status-v0.0.3.tgz  midl-status-v0.0.4.tgz  mypy.ini  pyproject.toml  wsgi.py
.github/workflows/: ci.yaml  pull_request.yaml
app/: __init__.py  celery.py  config.py  extensions.py  main.py  models.py  worker.py
app/blueprints/: __init__.py
app/blueprints/home/: __init__.py
app/dash/: flask.py  status.py
app/templates/: base.html  dash.html
app/templates/partials/: footer.html  navbar.html  scripts.html
charts/midl-status/: Chart.yaml  values.yaml
charts/midl-status/templates/: _helpers.tpl
charts/midl-status/templates/celery-beat/: deployment.yaml
charts/midl-status/templates/celery-worker/: deployment.yaml
charts/midl-status/templates/flask-core/: configmap.yaml  secret.yaml
charts/midl-status/templates/flask-job/: migrate.yaml
charts/midl-status/templates/flask-server/: deployment.yaml
charts/midl-status/templates/tests/: test-connection.yaml
dashbord/: midl-status-dashboard.json
migrations/versions/: 2b1c45bc4f2b_.py  888c03d17df7_.py  b8bc19bdb95a_.py  fa41a717baec_.py
tests/: conftest.py
tests/functional/: test_home_bp.py
tests/unit/: test_models.py
tools/: data_seed.py  seed.py
