[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Chao Zhang <chao.zhang@midl.dev>"]
description = "Project for MIDL public status page"
name = "midl-status"
packages = [{include = "midl_status"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
flask-migrate = "^4.0.4"
flask-sqlalchemy = "^3.0.5"
loki-api-client = "^0.1.0"
markupsafe = "^2.1.3"
psycopg2-binary = "^2.9.6"
python = "^3.10"
python-dotenv = "^1.0.0"
celery = "^5.3.1"
redis = "^4.6.0"

[tool.poetry.group.dev.dependencies]
toml-sort = "^0.23.1"

[tool.poetry.group.test.dependencies]
mypy = "^1.4.0"
pytest = "^7.3.2"
